--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "simple-api",
-  "version": "1.0.0",
-  "main": "server.js",
+  "name": "simple-api-ts",
+  "version": "0.5.1",
+  "main": "dist/source/index.js",
   "license": "MIT",
   "scripts": {
-    "tsc": "tsc",
-    "prestart": "tsc",
-    "start": "node dist/src/server.js",
-    "dev": "nodemon src/server.ts",
-    "dev:debug": "nodemon --inspect src/server.ts",
-    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
+    "postinstall": "",
+    "prepublish": "",
+    "build": "tsc",
     "test": "jest --passWithNoTests --ci --verbose --forceExit --detectOpenHandles",
-    "integration": "jest -i -c integration.config.json --passWithNoTests  --ci --verbose --forceExit --detectOpenHandles"
+    "integration": "jest -i -c integration.config.json --passWithNoTests  --ci --verbose --forceExit --detectOpenHandles",
+    "prestart": "",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
   "dependencies": {
     "bignumber.js": "^9.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "flexiblepersistence": "^1.0.52",
-    "google-auth-library": "^5.10.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.5",
-    "pg": "^7.18.2",
     "ts-mixer": "^5.1.0"
   },
   "devDependencies": {
@@ -30,7 +26,6 @@
     "@types/express": "^4.17.3",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.0",
-    "@types/pg": "^7.14.3",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
