--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-api-ts",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "main": "dist/source/index.js",
   "license": "MIT",
   "scripts": {
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "flexiblepersistence": "^1.0.54",
-    "ts-mixer": "^5.1.0"
+    "ts-mixer": "^5.1.0",
+    "pg": "8.0.0"
   },
   "devDependencies": {
     "@types/bignumber.js": "^5.0.0",
@@ -26,6 +27,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.0",
+    "@types/pg": "^7.14.3",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
