--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "postinstall": "",
     "prepublish": "",
-    "build": "tsc",
+    "build": "rm -rf dist/ && tsc",
     "test": "jest --passWithNoTests --ci --verbose --forceExit --detectOpenHandles",
     "integration": "jest -i -c integration.config.json --passWithNoTests  --ci --verbose --forceExit --detectOpenHandles",
     "prestart": "",
@@ -22,7 +22,7 @@
     "bignumber.js": "^9.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "flexiblepersistence": "^1.0.54",
+    "flexiblepersistence": "^1.0.55",
     "ts-mixer": "^5.1.0",
     "pg": "8.0.0"
   },
@@ -40,10 +40,10 @@
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.2.4",
+    "jest": "^25.2.6",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
-    "sucrase": "^3.13.1",
+    "sucrase": "^3.13.0",
     "ts-jest": "^25.3.0",
     "typescript": "^3.8.3"
   }
