--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-api-ts",
-  "version": "0.5.10",
+  "version": "0.5.11",
   "main": "dist/source/index.js",
   "module": "dist/source/index.js",
   "types": "dist/source/index.d.ts",
@@ -19,32 +19,32 @@
     "tsc:w": "tsc -w"
   },
   "dependencies": {
-    "bignumber.js": "^9.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "flexiblepersistence": "^1.0.55",
-    "ts-mixer": "^5.1.0",
+    "bignumber.js": "9.0.0",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "flexiblepersistence": "1.0.55",
+    "ts-mixer": "5.1.0",
     "pg": "8.0.0"
   },
   "devDependencies": {
-    "@types/bignumber.js": "^5.0.0",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.4",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.8",
-    "@types/pg": "^7.14.3",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "@types/bignumber.js": "5.0.0",
+    "@types/cors": "2.8.6",
+    "@types/express": "4.17.4",
+    "@types/jest": "25.1.4",
+    "@types/node": "13.9.8",
+    "@types/pg": "7.14.3",
+    "@typescript-eslint/eslint-plugin": "2.26.0",
+    "@typescript-eslint/parser": "2.26.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.1",
     "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.2.6",
-    "nodemon": "^2.0.2",
-    "prettier": "^2.0.2",
-    "sucrase": "^3.13.0",
-    "ts-jest": "^25.3.0",
-    "typescript": "^3.8.3"
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-prettier": "3.1.2",
+    "jest": "25.2.6",
+    "nodemon": "2.0.2",
+    "prettier": "2.0.2",
+    "sucrase": "3.13.0",
+    "ts-jest": "25.3.0",
+    "typescript": "3.8.3"
   }
 }
