--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "express": "4.17.1",
     "journaly": "0.1.3",
     "flexiblepersistence": "1.0.57",
-    "ts-mixer": "5.1.0",
+    "ts-mixer": "5.2.0-beta.0",
     "pg": "8.0.0"
   },
   "devDependencies": {
     "@types/cors": "2.8.6",
     "@types/express": "4.17.4",
-    "@types/jest": "25.2.1",
+    "@types/jest": "25.1.5",
     "@types/node": "13.11.0",
     "@types/pg": "7.14.3",
     "@typescript-eslint/eslint-plugin": "2.26.0",
@@ -40,11 +40,11 @@
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-prettier": "3.1.2",
-    "jest": "25.2.6",
+    "jest": "25.1.0",
     "nodemon": "2.0.2",
     "prettier": "2.0.4",
     "sucrase": "3.13.0",
-    "ts-jest": "25.3.1",
+    "ts-jest": "25.2.1",
     "typescript": "3.8.3"
   }
 }
