--- a/package.json
+++ b/package.json
@@ -20,31 +20,34 @@
   },
   "dependencies": {
     "bignumber.js": "9.0.0",
+    "@flexiblepersistence/service": "0.0.2",
+    "@flexiblepersistence/postgres": "0.0.1",
+    "default-initializer": "0.0.2",
     "cors": "2.8.5",
     "express": "4.17.1",
     "journaly": "1.0.0",
-    "flexiblepersistence": "1.0.57",
+    "flexiblepersistence": "1.0.62",
     "ts-mixer": "5.3.0",
-    "pg": "8.2.1"
+    "pg": "8.3.2"
   },
   "devDependencies": {
-    "@types/cors": "2.8.6",
-    "@types/express": "4.17.6",
-    "@types/jest": "25.2.3",
-    "@types/node": "14.0.10",
-    "@types/pg": "7.14.3",
-    "@typescript-eslint/eslint-plugin": "3.1.0",
-    "@typescript-eslint/parser": "3.1.0",
-    "eslint": "7.1.0",
+    "@types/cors": "2.8.7",
+    "@types/express": "4.17.7",
+    "@types/jest": "26.0.10",
+    "@types/node": "14.6.0",
+    "@types/pg": "7.14.4",
+    "@typescript-eslint/eslint-plugin": "3.9.1",
+    "@typescript-eslint/parser": "3.9.1",
+    "eslint": "7.7.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-prettier": "3.1.3",
-    "jest": "26.0.1",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "jest": "26.4.0",
     "nodemon": "2.0.4",
     "prettier": "2.0.5",
     "sucrase": "3.15.0",
-    "ts-jest": "26.1.0",
-    "typescript": "3.9.5"
+    "ts-jest": "26.2.0",
+    "typescript": "3.9.7"
   }
 }
