--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "dist"
   ],
   "license": "MIT",
+  "config": {
+    "jest": "--coverage --passWithNoTests --ci --verbose --forceExit --detectOpenHandles --colors",
+    "integration_config": "-i -c integration.config.json",
+    "unit_coverall": "tests/unit/coverage/lcov.info",
+    "integration_coverall": "tests/integration/coverage/lcov.info",
+    "path_dist": "dist",
+    "path_source": "src",
+    "path_server": "src/server"
+  },
   "scripts": {
     "postinstall": "",
     "prepublish": "",
     "build": "rm -rf dist/ && tsc",
     "test": "jest --passWithNoTests --ci --verbose --forceExit --detectOpenHandles",
     "integration": "jest -i -c integration.config.json --passWithNoTests  --ci --verbose --forceExit --detectOpenHandles",
+    "start": "node dist/source/server.js",
     "prestart": "",
     "tsc": "tsc",
     "tsc:w": "tsc -w"
@@ -28,26 +38,26 @@
     "journaly": "1.0.0",
     "flexiblepersistence": "1.0.62",
     "ts-mixer": "5.3.0",
-    "pg": "8.3.2"
+    "pg": "8.3.3"
   },
   "devDependencies": {
     "@types/cors": "2.8.7",
-    "@types/express": "4.17.7",
-    "@types/jest": "26.0.10",
-    "@types/node": "14.6.0",
+    "@types/express": "4.17.8",
+    "@types/jest": "26.0.12",
+    "@types/node": "14.6.2",
     "@types/pg": "7.14.4",
-    "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/parser": "3.9.1",
-    "eslint": "7.7.0",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
+    "eslint": "7.8.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-prettier": "3.1.4",
-    "jest": "26.4.0",
+    "jest": "26.4.2",
     "nodemon": "2.0.4",
-    "prettier": "2.0.5",
+    "prettier": "2.1.1",
     "sucrase": "3.15.0",
-    "ts-jest": "26.2.0",
-    "typescript": "3.9.7"
+    "ts-jest": "26.3.0",
+    "typescript": "4.0.2"
   }
 }
